[tool.poetry]
name = "close-nba-games"
version = "0.1.0"
description = "A Python app that uses Prefect to create a scheduled flow that checks for close NBA games"
authors = ["Pramod Jacob <pramod@prefect.io>"]

[tool.poetry.dependencies]
python = "^3.7"
prefect = "^0.8.1"
twilio = "^6.35.1"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[tool.poetry.scripts]
close-nba-games = "close_nba_games.main:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
